<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stas is a software developer"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Click me"
        android:layout_below="@+id/view"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button"
        android:layout_marginStart="2dp"
        android:layout_toEndOf="@id/button" />
    <Button
        android:id="@+id/secondActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ListView"
        android:layout_below="@id/button"/>
    <Button
        android:id="@+id/thirdActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RecyclerView"
        android:layout_below="@id/secondActivity"/>
    <TextView
        android:id="@+id/intentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thirdActivity"
        android:text="Intent Rule"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/intentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intentText"
        android:text="Intent Rule Button"/>

</RelativeLayout>