<resources>
    <string name="app_name">unitTests</string>
    <string name="nothing">Nothing</string>
    <string name="url">Url</string>
    <string name="file">File</string>
    <string name="empty_text">Text is empty</string>
</resources>
