<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textIntentSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stas is a software developer"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/buttonIntentSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Click On Me"
        android:layout_below="@+id/textIntentSecond"
        android:layout_marginTop="5dp"/>

</RelativeLayout>